feat: complete httpbin compatibility
